--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-    "name": "consultacep",
+    "name": "consultacep-api",
     "version": "1.0.0",
     "description": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon index.js"
+        "start:dev": "nodemon server.js",
+        "start": "node server.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "cheerio": "^1.0.0-rc.3",
+        "express": "^4.17.1",
         "request": "^2.88.0"
     }
 }
